--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "sinon": "^1.17.4"
   },
   "peerDependencies": {
-    "graphql-tag": "^0.1.7"
+    "graphql-tag": "^0.1.7",
+    "winston": "^2.2.0"
   },
   "babel": {
     "presets": [
@@ -40,8 +41,6 @@
     ]
   },
   "dependencies": {
-    "jsx-control-statements": "^3.1.2",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "jsx-control-statements": "^3.1.2"
   }
 }
