--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-eslint": "^6.0.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
     "eslint": "^2.10.2",
@@ -33,11 +34,17 @@
   },
   "peerDependencies": {
     "graphql-tag": "^0.1.7",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "regenerator-runtime": "^0.9.5"
   },
   "babel": {
     "presets": [
       "es2015"
+    ],
+    "plugins": [
+      "syntax-async-functions",
+      "transform-regenerator",
+      "transform-object-rest-spread"
     ]
   },
   "dependencies": {
