--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
     "eslint": "^2.10.2",
     "eslint-plugin-jsx-control-statements": "^2.1.1",
@@ -35,17 +36,9 @@
   "peerDependencies": {
     "graphql-tag": "^0.1.7",
     "winston": "^2.2.0",
-    "regenerator-runtime": "^0.9.5"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "syntax-async-functions",
-      "transform-regenerator",
-      "transform-object-rest-spread"
-    ]
+    "regenerator-runtime": "^0.9.5",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "dependencies": {
     "jsonwebtoken": "^7.0.1",
