--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
   "parser": "babel-eslint",
 
   "env": {
-    "es6": true
+    "es6": true,
+    "mocha": true,
+    "node": true,
+    "browser": true
   },
   
   "rules": {
