--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile",
-    "test": "mocha --compilers js:babel-core/register \"src/**/*.spec.js\""
+    "test": "mocha --compilers js:babel-core/register \"src/**/*.spec.js\"",
+    "coverage": "istanbul cover _mocha -- --compilers js:babel-core/register \"src/**/*.spec.js\" -R spec",
+    "coveralls": "istanbul cover _mocha --report lcovonly -- --compilers js:babel-core/register \"src/**/*.spec.js\" -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -27,10 +29,13 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
     "eslint": "^2.10.2",
     "eslint-plugin-jsx-control-statements": "^2.1.1",
     "eslint-plugin-react": "^5.1.1",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^2.5.3",
+    "mocha-lcov-reporter": "^1.2.0",
     "regenerator-runtime": "^0.9.5",
     "rethinkdbdash": "^2.3.16",
     "sinon": "^1.17.4",
