--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.9",
     "eslint": "^2.10.2",
     "eslint-plugin-jsx-control-statements": "^2.1.1",
@@ -36,6 +37,7 @@
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^2.5.3",
     "mocha-lcov-reporter": "^1.2.0",
+    "proxyquire": "^1.7.10",
     "regenerator-runtime": "^0.9.5",
     "rethinkdbdash": "^2.3.16",
     "sinon": "^1.17.4",
