--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.7.5",
+    "babel-core": "^6.10.4",
     "babel-eslint": "^6.0.4",
     "babel-plugin-syntax-async-functions": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
