--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ machine:
     - wget -qO- https://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
     - sudo apt-get update
     - sudo apt-get install rethinkdb
-    - sudo service rethinkdb start
+    - rethinkdb
 
 test:
   post:
