--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,30 +16,9 @@
   "parserOptions": {
     "ecmaVersion": 7,
     "experimentalObjectRestSpread": true,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
+    "sourceType": "module"
   },
 
-  "plugins": [
-    "react",
-    "jsx-control-statements"
-  ],
-
-  "globals": {
-      "If": true,
-      "Else": true,
-      "For": true
-  },
-
-  "settings": {
-    "react": {
-      "pragma": "React",
-      "version": "0.14.0"
-    }
-  },
-
-  "extends": [ "eslint:recommended", "plugin:react/recommended" ]
+  "extends": [ "eslint:recommended" ]
 
 }
