--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "jsonwebtoken": "^7.0.1",
+    "jwt-decode": "^2.1.0",
     "sha.js": "^2.4.5"
   }
 }
