--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "mocha --compilers js:babel-core/register \"src/**/*.spec.js\"",
+    "lint": "eslint src",
     "coverage": "istanbul cover _mocha -- --compilers js:babel-core/register \"src/**/*.spec.js\" -R spec",
     "coveralls": "istanbul cover _mocha --report lcovonly -- --compilers js:babel-core/register \"src/**/*.spec.js\" -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
@@ -48,7 +49,6 @@
     "passport-local": "^1.0.0",
     "proxyquire": "^1.7.10",
     "regenerator-runtime": "^0.9.5",
-    "rethinkdbdash": "^2.3.16",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "winston": "^2.2.0"
